# ionl

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  vcpkg.json
source/: App.cpp  App.hpp  BackingStore.cpp  BackingStore.hpp  Config.hpp  Document.cpp  Document.hpp  GapBuffer.cpp  GapBuffer.hpp  Markdown.cpp  Markdown.hpp  MarkdownStyles.cpp  MarkdownStyles.hpp  SQLiteHelper.hpp  TextEdit.cpp  TextEdit.hpp  Utils.hpp  WidgetMisc.cpp  WidgetMisc.hpp  WidgetTextEdit.cpp  WidgetTextEdit.hpp  imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp  main.cpp  main_inl.cpp
src/imgui/: imgui_draw.cpp
src/ionl/: BackingStore.cpp  BackingStore.hpp  Config.cpp  Config.hpp  Document.cpp  GapBuffer.cpp  GapBuffer.hpp  Macros.hpp  Markdown.cpp  Markdown.hpp  WidgetMisc.cpp  WidgetTextEdit.cpp  WidgetTextEdit.hpp  backing_store.cpp  backing_store.hpp  config.cpp  config.hpp  document.cpp  document.hpp  gap_buffer.cpp  gap_buffer.hpp  main.cpp  markdown.cpp  markdown.hpp  sqlite_helper.hpp  text_buffer.cpp  text_buffer.hpp  utils.hpp  widget_misc.cpp  widget_misc.hpp  widget_text_edit.cpp  widget_text_edit.hpp  widget_text_edit.md
